# UGKS-Implentation-Cpp

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  UGKS  annotated.html  annotated_dup.js  classBGK-members.html  classBGK.html  classBGK.js  classBGK__coll__graph.map  classBGK__coll__graph.md5  classCollision-members.html  classCollision.html  classCollision.js  classCollision__coll__graph.map  classCollision__inherit__graph.map  classCollision__inherit__graph.md5  classFockerPlank-members.html  classFockerPlank.html  classFockerPlank.js  classFockerPlank__coll__graph.map  classFockerPlank__coll__graph.md5  classMatrix-members.html  classMatrix.html  classMatrix.js  classMatrix__coll__graph.map  classMatrix__coll__graph.md5  classes.html  collision.cpp  collision.h  collision.hpp  collision_8cpp_source.html  collision_8hpp_source.html  discretization.h  discretization.hpp  discretization_8hpp_source.html  evaluations.cpp  evaluations.h  evaluations.hpp  (+57 more)
Results/: pb_diffusion.json  pb_transport.json  plot_diffusion.asv  plot_diffusion.m  plot_transport.m  plots.m  read_CSV_matrix.m  read_json.m  rho_exact_diffusion.asv  rho_exact_diffusion.m  rho_exact_transport.m  ρ_transport.json
search/: all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_19.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_5.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  (+23 more)
(+154 files in other folders)
